--- a/src/validation.html
+++ b/src/validation.html
@@ -29,7 +29,7 @@
             <div class='form-group'>
               <label for='bioRefUuid' class='col-sm-2 control-label'>Biological reference set uuid</label>
               <div class='col-sm-7'>
-                <input type='text' value.bind='bioRefUuid' class='form-control' id='bioRefUuid' readonly>
+                <input type='text' value.bind='bioRefUuid' class='form-control' id='bioRefUuid'>
               </div>
             </div>
             <div class='form-group'>
